<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/login_layout"
    >
    <!-- Layout provided by doctor code https://www.youtube.com/watch?v=fBOL8t6plRg -->

    <!-- Image source https://filmdaily.co/obsessions/best-funny-and-dirty-memes/-->

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:layout_marginBottom="25dp"
        android:background="@mipmap/ic_funny_foreground"
        android:fontFamily="cursive"
        android:paddingVertical="35dp"
        android:scaleType="centerCrop"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:layout_marginTop="-75dp"/>
    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/funny_station"
        android:textAlignment="center"
        android:textSize="40dp"
        android:layout_marginTop="-80dp"
        android:layout_marginBottom="30dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="30dp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/button_btn"
        android:textColor="@android:color/white"
        android:onClick="login"
        />
    <Button
        android:id="@+id/createLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account_yet_create_one"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:background="@android:color/transparent"
        android:onClick="createAccount"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>
</LinearLayout>