<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic__home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_get_me_a_joke"
            android:icon="@drawable/ic_emoji"
            android:title="@string/menu_get_me_a_joke" />
        <item
            android:id="@+id/nav_folders"
            android:icon="@drawable/ic_folder"
            android:title="@string/menu_folders" />
    </group>
</menu>