...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:id="@+id/create_account_layout"
    >
    <!-- Layout provided by doctor code https://www.youtube.com/watch?v=fBOL8t6plRg -->

    <!-- Image source https://filmdaily.co/obsessions/best-funny-and-dirty-memes/-->


...
