<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/getMeAJoke_fragment"
    tools:context=".ui.getMeAJoke.GetMeAJokeFragment">


    <Button
        android:id="@+id/button6"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_btn"
        android:text="Get me a Joke"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="296dp"
        android:layout_height="168dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        android:shadowColor="@color/colorAccent"
        android:background="@drawable/button_btn"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:padding="40dp"/>


    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Save"
        android:background="@drawable/button_btn"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


</androidx.constraintlayout.widget.ConstraintLayout>